Minimal theme with switchable theme for website modules