@@ -1,17 +1,22 @@
+@file:Suppress("UNUSED_VARIABLE")
+
 import org.gradle.api.Project
 import org.gradle.api.attributes.Bundling
 import org.gradle.api.tasks.JavaExec
+import org.gradle.kotlin.dsl.creating
 import org.gradle.kotlin.dsl.dependencies
 import org.gradle.kotlin.dsl.getValue
+import org.gradle.kotlin.dsl.getting
 import org.gradle.kotlin.dsl.invoke
 import org.gradle.kotlin.dsl.named
 import org.gradle.kotlin.dsl.provideDelegate
-import org.gradle.kotlin.dsl.register
 import org.gradle.kotlin.dsl.registering
 import org.gradle.language.base.plugins.LifecycleBasePlugin
 
-fun Dependencies.ktlint(module: String? = null) =
-    "com.pinterest${module?.let { ".ktlint:ktlint-$it" } ?: ":ktlint"}:0.43.2"
+fun Dependencies.ktlint(module: String? = null) = when (module) {
+    null -> "com.pinterest:ktlint:0.45.2"
+    else -> "com.pinterest.ktlint:ktlint-$module:0.45.2"
+}
 
 fun Project.ktlint(vararg rulesets: Any) {
     val ktlint by configurations.registering
@@ -19,15 +24,16 @@ fun Project.ktlint(vararg rulesets: Any) {
         ktlint {
             invoke(ktlint()) {
                 attributes {
-                    attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+                    attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named<Bundling>(Bundling.EXTERNAL))
                 }
             }
             rulesets.forEach { invoke(it) }
         }
     }
+
+    val outputDir = "${project.buildDir}/reports/ktlint/"
+    val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
     tasks {
-        val outputDir = "$buildDir/reports/ktlint/"
-        val inputFiles = fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
         val ktlintCheck by registering(JavaExec::class) {
             group = LifecycleBasePlugin.VERIFICATION_GROUP
             inputs.files(inputFiles)
@@ -35,20 +41,19 @@ fun Project.ktlint(vararg rulesets: Any) {
             description = "Check Kotlin code style."
             classpath = ktlint.get()
             mainClass.set("com.pinterest.ktlint.Main")
-            args = listOf("src/**/*.kt")
+            args("src/**/*.kt")
         }
-        named("check") {
+        val check by getting {
             dependsOn(ktlintCheck)
         }
-        register<JavaExec>("ktlintFormat") {
+        val ktlintFormat by registering(JavaExec::class) {
             group = "formatting"
             inputs.files(inputFiles)
             outputs.dir(outputDir)
             description = "Fix Kotlin code style deviations."
             classpath = ktlint.get()
             mainClass.set("com.pinterest.ktlint.Main")
-            args = listOf("-F", "src/**/*.kt")
-            jvmArgs = listOf("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+            args("-F", "src/**/*.kt")
         }
     }
 }
